# gluesql

storages/object-storage/: Cargo.toml
storages/object-storage/src/: lib.rs  storage.rs
